--- a/MindValleyiOSChallenge/MindValleyiOSChallenge/CustomCells/AdsCollectionViewCell/AdsCollectionViewCell.xib
+++ b/MindValleyiOSChallenge/MindValleyiOSChallenge/CustomCells/AdsCollectionViewCell/AdsCollectionViewCell.xib
@@ -22,9 +22,9 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zmW-vD-KD9">
                         <rect key="frame" x="0.0" y="0.0" width="248" height="221"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="yTN-xi-YF0">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" image="mindvalleyLogo1" translatesAutoresizingMaskIntoConstraints="NO" id="yTN-xi-YF0">
                                 <rect key="frame" x="0.0" y="0.0" width="248" height="114"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1Ad 1" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dyz-W7-Uw8">
                                 <rect key="frame" x="10" y="124" width="228" height="40"/>
@@ -41,7 +41,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQh-Pu-Kcn">
-                                <rect key="frame" x="10" y="166" width="228" height="45"/>
+                                <rect key="frame" x="10" y="166" width="188" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="HWs-0Q-zaO" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
                                 </constraints>
@@ -55,6 +55,16 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="fontSizeTheme" value="sizeXSmall"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-mb-uWt">
+                                <rect key="frame" x="208" y="181" width="30" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="brN-mB-ftX" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
+                                    <constraint firstAttribute="width" constant="30" id="eXX-gg-NVD" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
+                                </constraints>
+                                <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" image="download"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.50341109154929575" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -65,9 +75,11 @@
                             <constraint firstAttribute="trailing" secondItem="yTN-xi-YF0" secondAttribute="trailing" id="dhP-Qb-lP5"/>
                             <constraint firstItem="eQh-Pu-Kcn" firstAttribute="top" secondItem="dyz-W7-Uw8" secondAttribute="bottom" constant="2" id="h29-cV-TlV" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
                             <constraint firstItem="eQh-Pu-Kcn" firstAttribute="leading" secondItem="zmW-vD-KD9" secondAttribute="leading" constant="10" id="h5R-Zh-P3k" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
-                            <constraint firstAttribute="trailing" secondItem="eQh-Pu-Kcn" secondAttribute="trailing" constant="10" id="ng3-7n-qBy" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
+                            <constraint firstAttribute="trailing" secondItem="aOo-mb-uWt" secondAttribute="trailing" constant="10" id="nO6-pg-fbV"/>
+                            <constraint firstItem="aOo-mb-uWt" firstAttribute="bottom" secondItem="eQh-Pu-Kcn" secondAttribute="bottom" id="q16-k4-T5w"/>
                             <constraint firstItem="dyz-W7-Uw8" firstAttribute="top" secondItem="yTN-xi-YF0" secondAttribute="bottom" constant="10" id="qbN-jm-8dl" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
                             <constraint firstAttribute="trailing" secondItem="dyz-W7-Uw8" secondAttribute="trailing" constant="10" id="sWi-4w-0hu" customClass="BaseLayoutConstraint" customModule="MindValleyiOSChallenge" customModuleProvider="target"/>
+                            <constraint firstItem="aOo-mb-uWt" firstAttribute="leading" secondItem="eQh-Pu-Kcn" secondAttribute="trailing" constant="10" id="ujb-w8-7jb"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -113,7 +125,11 @@
                 <outlet property="lblSubTitle" destination="eQh-Pu-Kcn" id="LfK-0u-RJj"/>
                 <outlet property="lblTitle" destination="dyz-W7-Uw8" id="xNZ-cK-gn7"/>
             </connections>
-            <point key="canvasLocation" x="131" y="92.5"/>
+            <point key="canvasLocation" x="130.43478260869566" y="92.075892857142847"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="download" width="30" height="30"/>
+        <image name="mindvalleyLogo1" width="960" height="540"/>
+    </resources>
 </document>
